changed link color

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     transition: background-color 250ms linear;
 }
 a {
-    color: #1a9d61;
+    color: #A94040;
 }
 .page-header {
     margin-top: 80px;
