--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Sass Example Site</title>
+    <title>Jaiden Gerig</title>
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
 </head>
 
