--- a/_sass/_games.scss
+++ b/_sass/_games.scss
@@ -28,6 +28,9 @@
         transition: transform .2s; /* Animation */
         &:hover{
             transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+            .hover-text{
+                opacity: 1;
+            }
         }
         &:focus{
             transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
@@ -46,4 +49,12 @@
         flex-direction: column-reverse;
         text-decoration: none;
     }
+}
+
+.hover-text{
+    opacity: 0;
+    transition: opacity .2s;
+    color: whitesmoke;
+    background-color: #0000007d;
+    font-size: 2rem;
 }
