--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -16,9 +16,7 @@
     .main-link{
         text-align: center;
         font-size: 3vw;
-        &:visited{
-            color:black
-        }
+        color:black;
         max-width: 10vw;
         display: flex;
         justify-content: center;
