--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -2,3 +2,13 @@ html *
 {
     font-family: 'Roboto', sans-serif;
 }
+
+// h1{
+//     font-size: 2rem;
+//     margin-top:1rem;
+//     margin-bottom:1rem;
+// }
+
+// h2{
+//     font-size: 1.5rem;
+// }
