--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!-- TODO Home Button -->
 <section class="game-page">
     <header class="game-header">
         <h1 class="game-header__title game-header__title--{{page.title | downcase}}">
