--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
+    <script src="https://kit.fontawesome.com/a5da533b41.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!-- TODO Home Button -->
     {{ content }}
 </body>
 
