--- a/_sass/_games.scss
+++ b/_sass/_games.scss
@@ -4,6 +4,39 @@
     margin: 0 auto;
 }
 
+.headshot{
+    &__container{
+        text-align:center
+    }
+
+    &__img{
+        border-radius: 50%;
+        width:10rem;
+    }
+}
+
+.about-me{
+    display: flex;
+    flex-direction: column;
+
+    &__name{
+        font-size: 2rem;
+        text-align: center;
+        margin-bottom: 0;
+    }
+
+    &__social-links{
+        text-align: center;
+        font-size: 2rem;
+        text-decoration: none;
+        a{
+            text-decoration: none;
+            margin-left:.5rem;
+            margin-right:.5rem;
+        }
+    }
+}
+
 .games-header{
     text-align: center;
     &__title{
