--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -13,13 +13,15 @@
 .homepage-sub-header{
     display:flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     .main-link{
         text-align: center;
-        font-size: 3vw;
+        font-size: 1.7rem;
         color:black;
         max-width: 10vw;
         display: flex;
         justify-content: center;
         align-items: center;
+        margin: 1rem;
     }
 }
