Demo for MowMowMow

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -14,3 +14,10 @@ html *
 // h2{
 //     font-size: 1.5rem;
 // }
+
+/* Color Theme Swatches in Hex */
+$Recycled-paper-texture-background-banner-1-hex: #26250F;
+$Recycled-paper-texture-background-banner-2-hex: #8C8161;
+$Recycled-paper-texture-background-banner-3-hex: #262521;
+$Recycled-paper-texture-background-banner-4-hex: #F2F0EB;
+$Recycled-paper-texture-background-banner-5-hex: #D9D6D2;
