--- a/_sass/_game.scss
+++ b/_sass/_game.scss
@@ -72,3 +72,9 @@
         text-align: center;
     }
 }
+
+.itch-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
