Back Button on game page

--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<!-- TODO Home Button -->
+<header class="home-link__container">
+    <a href="/games/" class="home-link">Back To Games</a>
+</header>
 <section class="game-page">
     <header class="game-header">
         <h1 class="game-header__title game-header__title--{{page.title | downcase}}">
