--- a/_sass/_game.scss
+++ b/_sass/_game.scss
@@ -1,3 +1,12 @@
+.home-link{
+    &__container{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin: 1rem;
+    }
+    font-size: 1.2rem;
+}
 .game-page{
     max-width: 70rem;
     margin: 0 auto;
@@ -25,6 +34,7 @@
             margin-bottom: 1rem;
             padding:2rem;
         }
+        margin: 1rem;
     }
 }
 
