--- a/_sass/_game.scss
+++ b/_sass/_game.scss
@@ -66,6 +66,13 @@
     }
 }
 
+.video-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 1rem;
+}
+
 .game-page__content{
     h1{
         font-size: 2rem;
