Fixed auto-generation of cover images

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,3 +5,13 @@
 @import "homepage";
 @import "games";
 @import "game";
+// Liquid only works in main.scss
+.project{
+    &__container{
+{% for game in site.categories.games %}
+&--{{game.title | downcase}}{
+    @include project-preview("{{game.previewImage}}");
+}
+{% endfor %}
+    }
+}
