--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
-    <script src="https://kit.fontawesome.com/a5da533b41.js" crossorigin="anonymous"></script>
+    <link href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css" rel="stylesheet">
     {% if jekyll.environment == 'production' %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53820040-3"></script>
