Differentiated Full Releases from game jam games

--- a/_sass/_games.scss
+++ b/_sass/_games.scss
@@ -40,6 +40,9 @@
     text-align: center;
     &__title{
         font-size: 2rem;
+        &--smaller{
+            font-size: 1.5rem;
+        }
     }
 }
 .projects{
