Updated ArrowBall Page + Started Post-Mortem

--- a/_sass/_game.scss
+++ b/_sass/_game.scss
@@ -11,6 +11,10 @@
     max-width: 70rem;
     margin: 0 auto;
     margin-bottom: 5rem;
+    & img{
+        max-height: 500px;
+        max-width: 100%;
+    }
 }
 
 .game-header{
