Moved post-mortem to a devlog

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,7 @@
 @import "homepage";
 @import "games";
 @import "game";
+@import "blog";
 // Liquid only works in main.scss
 .project{
     &__container{
