--- a/_sass/_games.scss
+++ b/_sass/_games.scss
@@ -90,6 +90,7 @@ $project-container-width: 30rem;
         height: 18rem;
         object-fit: cover;
         object-position: top;
+        border-radius: 20px;
     }
 
     &__preview-text {
