Finally got prioritized games working

--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<header class="home-link__container">
+    <a href="/games/" class="home-link">Jaiden Gerig | Games Portfolio</a>
+</header>
 <section class="game-page">
     <header class="game-header">
         <h1 class="game-header__title game-header__title--{{page.title | downcase}}">
@@ -36,6 +39,3 @@ layout: default
         {{contentArray.last}}
     </section>
 </section>
-<header class="home-link__container">
-    <a href="/games/" class="home-link">Other Games By Jaiden</a>
-</header>
