new header, setting up blog posts, other things

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,14 @@
 </head>
 
 <body>
+    <section class="page-header">
+        <section class="page-header__title">
+            <a href="/games" class="header-link">Jaiden Gerig | Gameplay Programmer & Designer</a>
+        </section>
+        <section class="page-header__links">
+            <a href="/blog" class="header-link">Blog</a> | <a href="/about" class="header-link">About Me</a>
+        </section>
+    </section>
     {{ content }}
 </body>
 
