--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,14 +6,8 @@ layout: default
         <h1 class="blog-header__title">
             {{page.title}}
         </h1>
-        <h2 class="blog-header__me">
-            <a href="/games/">
-                <img class="headshot__img" src="/assets/images/headshot.jpg" alt="">
-                <span class="my-name"> Jaiden Gerig </span>
-            </a>
-        </h2>
         <h2 class="blog-header__date">
-            {% assign d = page.date | date: "%-d"  %}
+            {% assign d = page.date | date: "%-d" %}
             {{ page.date | date: "%B" }}
             {% case d %}
             {% when '1' or '21' or '31' %}{{ d }}st
@@ -29,5 +23,5 @@ layout: default
     </section>
 </section>
 <header class="home-link__container">
-    <a href="/games/" class="home-link">Other Games By Jaiden</a>
+    <a href="/blog/" class="home-link">More Posts By Jaiden</a>
 </header>
