--- a/_sass/_games.scss
+++ b/_sass/_games.scss
@@ -22,6 +22,7 @@
         font-size: 2rem;
         text-align: center;
         margin-bottom: 0;
+        margin-top: 1rem;
     }
 
     &__social-links {
@@ -42,6 +43,7 @@
 
     &__title {
         font-size: 2rem;
+        margin-bottom: 0;
 
         &--smaller {
             font-size: 1.5rem;
