--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,53 +1,247 @@
-.home-link{
-    &__container{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin: 1rem;
-    }
-    font-size: 1.2rem;
+.blog-directory-page {
+    max-width: 40rem;
+    margin: 0 auto;
 }
-.blog-page{
-    max-width: 70rem;
+
+.blog-page {
+    max-width: 40rem;
     margin: 0 auto;
     margin-bottom: 5rem;
-    & img{
+
+    & img {
         max-height: 500px;
         max-width: 100%;
     }
 }
 
-.blog-header{
-    &__title{
-        font-size: 4rem;
+.blog-header {
+    &__title {
+        font-size: 3rem;
         margin: .2rem;
     }
-    &__date{
+
+    &__date {
         font-size: 1.5rem;
         margin: .2rem;
     }
-    &__me{
+
+    &__me {
         font-size: 1.5rem;
         margin: .2rem;
+
         & a {
             text-decoration: none;
         }
-        & .my-name{
+
+        & .my-name {
             font-size: 2rem;
         }
-        & img{
+
+        & img {
             height: 2rem;
             width: 2rem;
         }
     }
 }
 
-.blog-page__content{
-    h1{
+.blog-page__content {
+    h1 {
         font-size: 2rem;
         margin-bottom: 1rem;
     }
-    h2{
+
+    h2 {
         font-size: 1.5rem;
     }
+}
+
+/* --- Post preview (feed) --- */
+
+.posts-list {
+    margin: 0;
+}
+
+.post-preview {
+    padding: 1.25rem 0;
+    border-bottom: 1px solid #eee;
+    overflow: hidden;
+}
+
+@media (min-width: 768px) {
+    .post-preview {
+        padding: 2.1875rem 0;
+    }
+}
+
+.post-preview:last-child {
+    border-bottom: 0;
+}
+
+.post-preview a {
+    text-decoration: none;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+    color: "#404040";
+}
+
+.post-preview a:focus,
+.post-preview a:hover {
+    text-decoration: none;
+
+    color: "#0085A1";
+}
+
+.post-preview .post-title {
+    font-size: 1.875rem;
+    margin-top: 0;
+}
+
+.post-preview .post-subtitle {
+    margin: 0;
+    font-weight: 300;
+    margin-bottom: 0.625rem;
+}
+
+.post-preview .post-meta,
+.post-heading .post-meta {
+    color: #808080;
+    font-size: 1.125rem;
+    font-style: italic;
+    margin: 0 0 0.625rem;
+    font-family: 'Lora', 'Times New Roman', serif;
+}
+
+.post-heading .post-meta {
+    display: inline-block;
+}
+
+@media (max-width: 767px) {
+    .post-heading .post-meta {
+        display: block;
+        margin-bottom: 0;
+    }
+}
+
+.post-heading .post-meta .middot {
+    margin: 0 0.625rem;
+}
+
+.post-preview .post-entry {
+    width: 100%;
+}
+
+.post-preview .post-image {
+    float: right;
+    margin-left: 0.625rem;
+    height: 12rem;
+    width: 12rem;
+}
+
+.post-preview .post-image {
+    filter: grayscale(40%);
+}
+
+.post-preview .post-image:hover {
+    filter: grayscale(0%);
+}
+
+.post-preview .post-image img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.post-preview .post-image-short {
+    margin-top: -2.1875rem;
+}
+
+@media (max-width: 767px) {
+    .post-preview .post-image {
+        height: 9rem;
+        width: 9rem;
+    }
+
+    .post-preview .post-image-short {
+        margin-top: 0;
+    }
+}
+
+.post-preview .post-image-small {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: none;
+}
+
+.post-preview .post-image-small img {
+    max-width: 6.25rem;
+    max-height: 6.25rem;
+}
+
+@media (max-width: 500px) {
+    .post-preview .post-image {
+        display: none;
+    }
+
+    .post-preview .post-image-small {
+        display: block;
+    }
+}
+
+.post-preview .post-read-more {
+    font-weight: 800;
+}
+
+@media (min-width: 768px) {
+    .post-preview .post-title {
+        font-size: 2.25rem;
+    }
+}
+
+/* --- Pagination --- */
+
+.pagination {
+    margin: 0.625rem 0 0;
+    justify-content: space-between;
+}
+
+.pagination.blog-pager {
+    margin-top: 0;
+}
+
+.pagination .page-item.next {
+    margin-left: auto;
+}
+
+@media (min-width: 768px) {
+    .pagination.blog-pager {
+        margin-top: 0.625rem;
+    }
+}
+
+.pagination .page-item .page-link {
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-size: 0.875rem;
+    font-weight: 800;
+    letter-spacing: 1px;
+    padding: 0.625rem 0.3125rem;
+    background-color: #FFF;
+    border-radius: 0;
+
+    color: "#404040";
+}
+
+@media (min-width: 768px) {
+    .pagination .page-item .page-link {
+        padding: 0.9375rem 1.5625rem;
+    }
+}
+
+.pagination .page-item .page-link:hover,
+.pagination .page-item .page-link:focus {
+    color: #FFF;
+
+    border: 1px solid "#0085A1";
+
+    background-color: "#0085A1";
 }
