--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -4,7 +4,7 @@
 }
 
 .blog-page {
-    max-width: 40rem;
+    max-width: 50rem;
     margin: 0 auto;
     margin-bottom: 5rem;
 
@@ -94,6 +94,7 @@
 .post-preview .post-title {
     font-size: 1.875rem;
     margin-top: 0;
+    margin-bottom: .5rem;
 }
 
 .post-preview .post-subtitle {
@@ -130,6 +131,10 @@
     width: 100%;
 }
 
+.post-preview .post-entry img {
+    max-height: 15rem;
+}
+
 .post-preview .post-image {
     float: right;
     margin-left: 0.625rem;
@@ -138,7 +143,7 @@
 }
 
 .post-preview .post-image {
-    filter: grayscale(40%);
+    filter: grayscale(20%);
 }
 
 .post-preview .post-image:hover {
@@ -167,14 +172,13 @@
 
 .post-preview .post-image-small {
     width: 100%;
-    height: 100%;
     text-align: center;
-    display: none;
 }
 
 .post-preview .post-image-small img {
-    max-width: 6.25rem;
-    max-height: 6.25rem;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
 }
 
 @media (max-width: 500px) {
@@ -194,6 +198,7 @@
 @media (min-width: 768px) {
     .post-preview .post-title {
         font-size: 2.25rem;
+        margin-bottom: .5rem;
     }
 }
 
@@ -245,3 +250,113 @@
 
     background-color: "#0085A1";
 }
+
+
+/* --- Code blocks --- */
+
+code {
+    padding: 0.125rem 0.25rem;
+    color: #c7254e;
+    background-color: #f9f2f4;
+    border-radius: 0.25rem;
+  }
+  
+  pre code {
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0;
+  }
+  
+  pre {
+    font-size: 0.875rem;
+    line-height: 1.5em;
+    border-radius: 0.25rem;
+    padding: 0.59375rem;
+  }
+  .highlight pre {
+    border: none;
+    background: none;
+    margin: 0;
+  }
+  .highlight > pre {
+    background-image: linear-gradient(
+      rgba(0,0,0,0.03), rgba(0,0,0,0.03) 1.5em, rgba(0,0,0,0.02) 1.5em, rgba(0,0,0,0.02) 3em);
+    background-size: auto 3em;
+    background-position-y: 0.625rem;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-left: 0.4375rem solid #444;
+  }
+  .highlight > pre:not([class~="highlight"]) { /* code block with line number */
+    padding: 0;
+  }
+  .highlight table,
+  .highlight tr,
+  .highlight td { /* to be removed after fixing table styles */
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+  }
+  .highlight pre.lineno {
+    color: rgba(0,0,0,0.3);
+    border-radius: 0;
+    border-right: 2px solid #444;
+  }
+  
+  /* Make line numbers unselectable: excludes line numbers from copy-paste user ops */
+  .lineno {
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+  }
+  .lineno::selection, .lineno::-moz-selection {
+    background: none;
+  }
+  
+  /* Fix table border github gist snippets */
+  
+  .gist, .gist-file table tr {
+    border: unset;
+  }
+  
+  .gist, .gist-file table tr td {
+    border: unset;
+  }
+
+  
+/* --- Tables --- */
+
+table {
+    padding: 0;
+  }
+  table tr {
+    border-top: 1px solid #cccccc;
+    background-color: #ffffff;
+    margin: 0;
+    padding: 0;
+  }
+  table tr:nth-child(2n) {
+    background-color: #f8f8f8;
+  }
+  table tr th {
+    font-weight: bold;
+    border: 1px solid #cccccc;
+    text-align: left;
+    margin: 0;
+    padding: 0.375rem 0.8125rem;
+  }
+  table tr td {
+    border: 1px solid #cccccc;
+    text-align: left;
+    margin: 0;
+    padding: 0.375rem 0.8125rem;
+  }
+  table tr th :first-child,
+  table tr td :first-child {
+    margin-top: 0;
+  }
+  table tr th :last-child,
+  table tr td :last-child {
+    margin-bottom: 0;
+  }
