--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section class="blog-page">
-    <header class="blog-header">
+    <header class="blog-header post-heading">
         <h1 class="blog-header__title">
             {{page.title}}
         </h1>
@@ -11,7 +11,6 @@ layout: default
             Posted on {{ page.date | date: date_format }}
         </p>
     </header>
-    <hr>
     <section class="blog-page__content">
         {{content}}
     </section>
