--- a/_sass/_games.scss
+++ b/_sass/_games.scss
@@ -44,6 +44,7 @@
     &__title {
         font-size: 2rem;
         margin-bottom: 0;
+        margin-top: .5rem;
 
         &--smaller {
             font-size: 1.5rem;
