Finally Done Mostly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,8 @@
             <a href="/games" class="header-link">Jaiden Gerig | Gameplay Programmer & Designer</a>
         </section>
         <section class="page-header__links">
-            <a href="/blog" class="header-link">Blog</a> | <a href="/about" class="header-link">About Me</a>
+            <a href="/blog" class="header-link">Blog</a>
+            <!-- | <a href="/about" class="header-link">About Me</a> -->
         </section>
     </section>
     {{ content }}
