--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         </section>
         <section class="page-header__links">
             <a href="/blog" class="header-link">Blog</a>
-            <!-- | <a href="/about" class="header-link">About Me</a> -->
+            | <a href="/about" class="header-link">About Me</a>
         </section>
     </section>
     {{ content }}
