--- a/_sass/_game.scss
+++ b/_sass/_game.scss
@@ -82,7 +82,7 @@
     }
 }
 
-.video-container {
+.video-container-header {
     display: flex;
     flex-direction: row;
     justify-content: center;
