--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -13,7 +13,7 @@ layout: default
     </header>
 
     {% if page.videoID %}
-    <section class="video-container">
+    <section class="video-container-header">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/{{page.videoID}}?autoplay=1" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
