--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -15,6 +15,7 @@
         margin-left: auto;
         margin-right: auto;
     }
+
     & img.header-img {
         width: 100%;
         object-fit: cover;
@@ -267,104 +268,121 @@ code {
     color: #c7254e;
     background-color: #f9f2f4;
     border-radius: 0.25rem;
-  }
-  
-  pre code {
+}
+
+pre code {
     padding: 0;
     background-color: transparent;
     border-radius: 0;
-  }
-  
-  pre {
+}
+
+pre {
     font-size: 0.875rem;
     line-height: 1.5em;
     border-radius: 0.25rem;
     padding: 0.59375rem;
-  }
-  .highlight pre {
+}
+
+.highlight pre {
     border: none;
     background: none;
     margin: 0;
-  }
-  .highlight > pre {
-    background-image: linear-gradient(
-      rgba(0,0,0,0.03), rgba(0,0,0,0.03) 1.5em, rgba(0,0,0,0.02) 1.5em, rgba(0,0,0,0.02) 3em);
+    line-height: 1rem;
+}
+
+.highlight>pre {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.03), rgba(0, 0, 0, 0.03) 1.5em, rgba(0, 0, 0, 0.02) 1.5em, rgba(0, 0, 0, 0.02) 3em);
     background-size: auto 3em;
     background-position-y: 0.625rem;
-    border: 1px solid rgba(0,0,0,0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-left: 0.4375rem solid #444;
-  }
-  .highlight > pre:not([class~="highlight"]) { /* code block with line number */
+}
+
+.highlight>pre:not([class~="highlight"]) {
+    /* code block with line number */
     padding: 0;
-  }
-  .highlight table,
-  .highlight tr,
-  .highlight td { /* to be removed after fixing table styles */
+}
+
+.highlight table,
+.highlight tr,
+.highlight td {
+    /* to be removed after fixing table styles */
     border: none;
     background: none;
     padding: 0;
     margin: 0;
-  }
-  .highlight pre.lineno {
-    color: rgba(0,0,0,0.3);
+}
+
+.highlight pre.lineno {
+    color: rgba(0, 0, 0, 0.3);
     border-radius: 0;
     border-right: 2px solid #444;
-  }
-  
-  /* Make line numbers unselectable: excludes line numbers from copy-paste user ops */
-  .lineno {
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-  }
-  .lineno::selection, .lineno::-moz-selection {
-    background: none;
-  }
-  
-  /* Fix table border github gist snippets */
-  
-  .gist, .gist-file table tr {
-    border: unset;
-  }
-  
-  .gist, .gist-file table tr td {
-    border: unset;
-  }
+}
 
-  
+/* Make line numbers unselectable: excludes line numbers from copy-paste user ops */
+.lineno {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.lineno::selection,
+.lineno::-moz-selection {
+    background: none;
+}
+
+/* Fix table border github gist snippets */
+
+.gist,
+.gist-file table tr {
+    border: unset;
+}
+
+.gist,
+.gist-file table tr td {
+    border: unset;
+}
+
+
 /* --- Tables --- */
 
 table {
     padding: 0;
-  }
-  table tr {
+}
+
+table tr {
     border-top: 1px solid #cccccc;
     background-color: #ffffff;
     margin: 0;
     padding: 0;
-  }
-  table tr:nth-child(2n) {
+}
+
+table tr:nth-child(2n) {
     background-color: #f8f8f8;
-  }
-  table tr th {
+}
+
+table tr th {
     font-weight: bold;
     border: 1px solid #cccccc;
     text-align: left;
     margin: 0;
     padding: 0.375rem 0.8125rem;
-  }
-  table tr td {
+}
+
+table tr td {
     border: 1px solid #cccccc;
     text-align: left;
     margin: 0;
     padding: 0.375rem 0.8125rem;
-  }
-  table tr th :first-child,
-  table tr td :first-child {
+}
+
+table tr th :first-child,
+table tr td :first-child {
     margin-top: 0;
-  }
-  table tr th :last-child,
-  table tr td :last-child {
+}
+
+table tr th :last-child,
+table tr td :last-child {
     margin-bottom: 0;
-  }
+}
