--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
         <section class="page-header__links">
             <a href="/blog" class="header-link">Blog</a>
             | <a href="/about" class="header-link">About Me</a>
+            | <a href="/contact" class="header-link">Contact</a>
         </section>
     </section>
     {{ content }}
