Update Unity To Unreal

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -22,6 +22,14 @@
         object-position: top;
         height: 300px;
     }
+
+    video{
+        max-height: 500px;
+        max-width: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 .blog-header {
