--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/line-numbers/prism-line-numbers.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/toolbar/prism-toolbar.min.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     {% if jekyll.environment == 'production' %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53820040-3"></script>
@@ -49,5 +50,33 @@
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/toolbar/prism-toolbar.min.js"></script>
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
 </body>
+
+<!-- Persists state of details tags with IDs -->
+<script>
+    (function() {
+    $('details').on('toggle', function(event) {
+    var id = $(this).attr('id')
+    var isOpen = $(this).attr('open')
+    console.log(id, isOpen)
+    window.localStorage.setItem('details-'+id, isOpen)
+    })
+
+    function setDetailOpenStatus(item) {
+    if (item.includes('details-')) {
+    var id = item.split('details-')[1];
+    var status = window.localStorage.getItem(item)
+    if (status == 'open'){
+    $("#"+id).attr('open',true)
+    }
+    }
+    }
+
+    $( document ).ready(function() {
+    for (var i = 0; i < localStorage.length; i++) {
+    setDetailOpenStatus(localStorage.key(i));
+    }
+    });
+    })();
+</script>
 
 </html>
