--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -14,6 +14,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 1em;
     }
 
     & img.header-img {
